# civic-digital-twins

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  pyproject.toml  pyrightconfig.json  sensitivity_analysis_framework_PAWN.py  understanding_molveno_model.md
.github/workflows/: publish.yml  test.yml
civic_digital_twins/: __init__.py
civic_digital_twins/dt_model/: __init__.py  axes.py  graph.py
civic_digital_twins/dt_model/engine/: __init__.py
civic_digital_twins/dt_model/engine/atomic/: __init__.py
civic_digital_twins/dt_model/engine/compileflags/: __init__.py
civic_digital_twins/dt_model/engine/frontend/: __init__.py  forest.py  graph.py  ir.py  linearize.py
civic_digital_twins/dt_model/engine/numpybackend/: __init__.py  astgen.py  astgenold.py  bytecode.py  debug.py  dispatch.py  executor.py  jit.py  numpy_ast.py  treecompiler.py
civic_digital_twins/dt_model/internal/sympyke/: piecewise.py  symbol.py
civic_digital_twins/dt_model/model/: __init__.py  axis.py  index.py  instantiated_model.py  model.py  model_variant.py  setup.py
civic_digital_twins/dt_model/reference_models/molveno/: overtourism.py
civic_digital_twins/dt_model/simulation/: __init__.py  ensemble.py  evaluation.py  handle.py  overturism_parallel.py  plan.py  runner.py  scenario.py  utils.py
civic_digital_twins/dt_model/symbols/: constraint.py  context_variable.py  index.py  presence_variable.py
docs/: getting-started.md
docs/design/: dd-000-engine.md  dd-cdt-engine.md  dd-cdt-model.md  dd-cdt-modularity.md
docs/inspection/: decisions.md
docs/seminar/: README.md  kpi_summary.txt  seminar.md  seminar_bologna.py
dt_model/: __init__.py
dt_model/engine/frontend/: graph.py  linearize.py  pretty.py  replace.py
dt_model/engine/numpybackend/: executor.py
dt_model/ensemble/: ensemble.py
dt_model/examples/molveno/: overtourism.py
dt_model/internal/sympyke/: piecewise.py
dt_model/model/: bbox.py  instantiated_model.py  legacy_model.py  model.py
dt_model/simulation/: ensemble.py  evaluation.py
dt_model/symbols/: _base.py  constraint.py  context_variable.py  index.py  presence_variable.py
examples/: a.py  dashboard.py  dashboard2.py  jit.py  llm-service-test.py  llm-test.py  mobility_bologna.py  overtourism.py  overtourism_molveno.py  overtourism_parallel_runner.py  overturism_parallel.py  overturism_parallel_runner.py  parallel_runner.py  parallel_workflow.py  presence_stats.py  results.md  runner.ipynb  simple.py  simplecodegen.py  simpleeval.py  viz_model.py
examples/doc/: doc_engine.py  doc_getting_started.py  doc_model.py  doc_modularity.py  doc_overtourism_getting_started.py  doc_readme.py
examples/mobility_bologna/: __init__.py  mobility_bologna.py  mobility_bologna_data.py  optimization_euro_split.py
examples/overtourism_molveno/: __init__.py  constraint.py  context_variable.py  ensemble.py  model.py  molveno_model.py  molveno_presence_stats.py  overtourism-getting-started.md  overtourism.py  overtourism_metamodel.py  overtourism_molveno.py  presence_variable.py  sensitivity_molveno.py
tests/: __init__.py  test_cv.py  test_doc_sync.py
tests/dt_model/engine/compileflags/: __init__.py  test_from_environ.py
tests/dt_model/engine/frontend/: test_forest.py  test_graph.py  test_ir.py  test_linearize.py
tests/dt_model/engine/numpybackend/: test_axis_reduction_operators.py  test_executor.py  test_jit.py  test_new_axis_operators.py  test_numpy_ast.py
tests/dt_model/examples/: __init__.py  test_bologna_runner.py  test_mobility_bologna.py  test_molveno_runner.py  test_overtourism_molveno.py
tests/dt_model/internal/sympyke/: test_operators.py  test_piecewise.py  test_symbol.py
tests/dt_model/model/: test_bbox.py  test_categorical_index.py  test_conditional_indexes.py  test_model.py  test_model_variant.py  test_model_variant_runtime.py
tests/dt_model/simulation/: __init__.py  test_acceptance_typed_axes.py  test_cross_product_ensemble.py  test_evaluation.py  test_evaluation_async.py  test_evaluation_handle.py  test_evaluation_regional.py  test_model_variant_evaluation.py  test_partitioned_ensemble.py  test_runner.py  test_scenario_ensemble_interaction.py
tests/dt_model/symbols/: test_context_variable.py  test_index.py  test_index_new_methods.py  test_index_reduction_methods.py
tests/engine/atomic/: test_int.py
tests/engine/frontend/: test_graph.py  test_pretty.py
tests/engine/numpybackend/: test_executor.py
tests/examples/molveno/: test_overtourism.py
tests/internal/sympyke/: test_operators.py  test_piecewise.py  test_symbol.py
tests/model/: test_instantiated_model.py
tests/reference_models/molveno/: test_overtourism.py
tests/symbols/: test_context_variable.py
